# geminiscope

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: release.yml
src/: app.rs  main.rs  models.rs  parser.rs  ui.rs  utils.rs
src/parser/: config.rs  health.rs  mcp.rs  mod.rs  project.rs  security.rs  session.rs  skills.rs  stats.rs
src/ui/: components.rs  explorer.rs  handlers.rs  infrastructure.rs  mod.rs  stats.rs  theme.rs
